--- a/Desarrollador WEB/Curso en español - UDEMY/JavaScript/IntroduccionJS-FINALIZADO/index.html
+++ b/Desarrollador WEB/Curso en español - UDEMY/JavaScript/IntroduccionJS-FINALIZADO/index.html
@@ -20,7 +20,7 @@
     </div>
 
 
-     <script src="js/scripts.js"></script> 
+     <!-- <script src="js/scripts.js"></script> 
      <script src="js/01.js"></script> 
      <script src="js/02.js"></script> 
      <script src="js/03.js"></script> 
@@ -39,21 +39,22 @@
      <script src="js/16.js"></script> 
      <script src="js/17.js"></script> 
      <script src="js/18.js"></script> 
-     <script src="js/19.js"></script> 
-     <script src="js/20.js"></script> 
-     <script src="js/21.js"></script> 
+     <script src="js/19 - Funciones con retorno - Importante.js"></script>  
+     <script src="js/20 - Métodos de propiedad.js"></script> 
+     <script src="js/21 - Arrow Functions.js"></script> 
+     <script src="js/21bis - Funciones con Arrow Functions más complejas.js"></script> 
      <script src="js/22.js"></script> 
-     <script src="js/23.js"></script> 
-     <script src="js/24.js"></script> 
+     <script src="js/23 - Switch.js"></script> 
+      <script src="js/24.js"></script> 
      <script src="js/25.js"></script> 
-     <script src="js/26.js"></script> 
-     <script src="js/27.js"></script> 
-     <script src="js/28.js"></script> 
+     <script src="js/26.js"></script> -->
+     <script src="js/27 - Constructor y Prototype.js"></script> 
+     <!-- <script src="js/28.js"></script> 
      <script src="js/29.js"></script> 
      <script src="js/30.js"></script> 
      <script src="js/31.js"></script> 
      <script src="js/32.js"></script> 
-    <script src="js/33.js"></script>
+    <script src="js/33.js"></script> -->
 
 </body>
 </html>
