--- a/Desarrollador WEB/Curso en español - UDEMY/JavaScript/JavaScript_DOM_Eventos_inicio/index.html
+++ b/Desarrollador WEB/Curso en español - UDEMY/JavaScript/JavaScript_DOM_Eventos_inicio/index.html
@@ -137,6 +137,7 @@
         </div>
     </footer>
     
-    <script src="js/modernizr.js"></script>
+    <script src="/Desarrollador WEB/Curso en español - UDEMY/JavaScript/JavaScript_DOM_Eventos_inicio/js/modernizr.js"></script>
+    <script src="/Desarrollador WEB/Curso en español - UDEMY/JavaScript/JavaScript_DOM_Eventos_inicio/js/scripts.js"></script>
 </body>
 </html>
