--- a/Desarrollador WEB/Curso en español - UDEMY/JavaScript/JavaScript_DOM_Eventos_inicio/index.html
+++ b/Desarrollador WEB/Curso en español - UDEMY/JavaScript/JavaScript_DOM_Eventos_inicio/index.html
@@ -38,7 +38,7 @@
         </div>
 
         <div class="header__texto">
-            <h2 class="no-margin">Blog de café con consejos y cursos</h2>
+            <h2 class="no-margin" id="heading_especifico">Blog de café con consejos y cursos</h2>
             <p class="no-margin">Aprende de los expertos con las mejores recetas y consejos</p>
         </div>
     </header>
@@ -137,7 +137,10 @@
         </div>
     </footer>
     
-    <script src="/Desarrollador WEB/Curso en español - UDEMY/JavaScript/JavaScript_DOM_Eventos_inicio/js/modernizr.js"></script>
-    <script src="/Desarrollador WEB/Curso en español - UDEMY/JavaScript/JavaScript_DOM_Eventos_inicio/js/scripts.js"></script>
+    <script src="js/modernizr.js"></script>
+    <!-- <script src="js/seleccionarElementos.js"></script> -->
+    <!--  <script src="js/createElement.js"></script> -->
+    <script src="js/eventos.js"></script>
+
 </body>
 </html>
